td5/jitfailure-dolfin_subdomain_11c8418c00adc253d1b3c49b1344a953/error.log
In file included from /var/folders/v3/4s04_5rd42558r4rq9nh54_80000gn/T/tmp4_t56wtj/dolfin_subdomain_11c8418c00adc253d1b3c49b1344a953.cpp:15:
In file included from /opt/miniconda3/envs/pde/include/dolfin/mesh/SubDomain.h:27:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Dense:1:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Core:170:
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/NumTraits.h:223:12: warning: use of infinity is undefined behavior due to the currently enabled floating-point options [-Wnan-infinity-disabled]
  223 |     return numext::numeric_limits<T>::infinity();
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/NEON/PacketMath.h:3282:63: note: in instantiation of member function 'Eigen::GenericNumTraits<float>::infinity' requested here
 3282 |   const Packet4f infinity = pset1<Packet4f>(NumTraits<float>::infinity());
      |                                                               ^
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/NEON/PacketMath.h:3282:45: warning: use of infinity is undefined behavior due to the currently enabled floating-point options [-Wnan-infinity-disabled]
 3282 |   const Packet4f infinity = pset1<Packet4f>(NumTraits<float>::infinity());
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/NEON/PacketMath.h:3292:45: warning: use of infinity is undefined behavior due to the currently enabled floating-point options [-Wnan-infinity-disabled]
 3292 |   const Packet2f infinity = pset1<Packet2f>(NumTraits<float>::infinity());
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /var/folders/v3/4s04_5rd42558r4rq9nh54_80000gn/T/tmp4_t56wtj/dolfin_subdomain_11c8418c00adc253d1b3c49b1344a953.cpp:15:
In file included from /opt/miniconda3/envs/pde/include/dolfin/mesh/SubDomain.h:27:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Dense:1:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Core:170:
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/NumTraits.h:223:12: warning: use of infinity is undefined behavior due to the currently enabled floating-point options [-Wnan-infinity-disabled]
  223 |     return numext::numeric_limits<T>::infinity();
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/NEON/PacketMath.h:3915:64: note: in instantiation of member function 'Eigen::GenericNumTraits<double>::infinity' requested here
 3915 |   const Packet2d infinity = pset1<Packet2d>(NumTraits<double>::infinity());
      |                                                                ^
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/NEON/PacketMath.h:3915:45: warning: use of infinity is undefined behavior due to the currently enabled floating-point options [-Wnan-infinity-disabled]
 3915 |   const Packet2d infinity = pset1<Packet2d>(NumTraits<double>::infinity());
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/var/folders/v3/4s04_5rd42558r4rq9nh54_80000gn/T/tmp4_t56wtj/dolfin_subdomain_11c8418c00adc253d1b3c49b1344a953.cpp:63:32: error: use of undeclared identifier 'neear'; did you mean 'near'?
   63 |          return on_boundary && neear(x[0], 0.0);
      |                                ^~~~~
      |                                near
/opt/miniconda3/envs/pde/include/dolfin/math/basic.h:56:8: note: 'near' declared here
   56 |   bool near(double x, double x0, double eps=DOLFIN_EPS);
      |        ^
In file included from /var/folders/v3/4s04_5rd42558r4rq9nh54_80000gn/T/tmp4_t56wtj/dolfin_subdomain_11c8418c00adc253d1b3c49b1344a953.cpp:15:
In file included from /opt/miniconda3/envs/pde/include/dolfin/mesh/SubDomain.h:27:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Dense:1:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Core:250:
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/Default/GenericPacketMathFunctions.h:853:52: warning: use of infinity is undefined behavior due to the currently enabled floating-point options [-Wnan-infinity-disabled]
  853 |   const RealPacket cst_pos_inf = pset1<RealPacket>(NumTraits<RealScalar>::infinity());
      |                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/NEON/Complex.h:382:10: note: in instantiation of function template specialization 'Eigen::internal::psqrt_complex<Eigen::internal::Packet1cf>' requested here
  382 |   return psqrt_complex<Packet1cf>(a);
      |          ^
In file included from /var/folders/v3/4s04_5rd42558r4rq9nh54_80000gn/T/tmp4_t56wtj/dolfin_subdomain_11c8418c00adc253d1b3c49b1344a953.cpp:15:
In file included from /opt/miniconda3/envs/pde/include/dolfin/mesh/SubDomain.h:27:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Dense:1:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Core:250:
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/Default/GenericPacketMathFunctions.h:853:52: warning: use of infinity is undefined behavior due to the currently enabled floating-point options [-Wnan-infinity-disabled]
  853 |   const RealPacket cst_pos_inf = pset1<RealPacket>(NumTraits<RealScalar>::infinity());
      |                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/NEON/Complex.h:386:10: note: in instantiation of function template specialization 'Eigen::internal::psqrt_complex<Eigen::internal::Packet2cf>' requested here
  386 |   return psqrt_complex<Packet2cf>(a);
      |          ^
In file included from /var/folders/v3/4s04_5rd42558r4rq9nh54_80000gn/T/tmp4_t56wtj/dolfin_subdomain_11c8418c00adc253d1b3c49b1344a953.cpp:15:
In file included from /opt/miniconda3/envs/pde/include/dolfin/mesh/SubDomain.h:27:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Dense:1:
In file included from /opt/miniconda3/envs/pde/include/eigen3/Eigen/Core:250:
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/Default/GenericPacketMathFunctions.h:853:52: warning: use of infinity is undefined behavior due to the currently enabled floating-point options [-Wnan-infinity-disabled]
  853 |   const RealPacket cst_pos_inf = pset1<RealPacket>(NumTraits<RealScalar>::infinity());
      |                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/miniconda3/envs/pde/include/eigen3/Eigen/src/Core/arch/NEON/Complex.h:575:10: note: in instantiation of function template specialization 'Eigen::internal::psqrt_complex<Eigen::internal::Packet1cd>' requested here
  575 |   return psqrt_complex<Packet1cd>(a);
      |          ^
8 warnings and 1 error generated.
